--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,4 +17,12 @@ jobs:
         node -v
         npm -v        
       
+  run-windows-command:
+    runs-on: windows-latest
+    steps:
+    - name: directroy power shell-command
+      run: Get-Location
+    - name: directory bash
+      run: pwd
+      shell: bash
     
