--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,6 +19,7 @@ jobs:
       
   run-windows-command:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
     - name: directroy power shell-command
       run: Get-Location
