--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,6 +6,8 @@ jobs:
   run-js-action:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: simple JS action
       id: greet
       uses: actions/hello-world-javascript-action@v1.1
@@ -13,4 +15,8 @@ jobs:
         who-to-greet: John
     - name: Log Greeting time
       run: echo "${{steps.greet.outputs.time }}"
+    - name: pwd n ls
+      run: |
+        pwd
+        ls -al
         
