--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,10 @@
 name: Using Actions
 
-on : [ push, pull_request ]
+on :
+  push:
+  pull_request:
+    types: [closed, assigned, opened, reopened]
+
 
 jobs:
   run-js-action:
