--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,9 @@
 name: Using Actions
 
 on :
-  push:
+  #push:
+  schedule:
+    - cron: "0/5 * * * *"
   pull_request:
     types: [closed, assigned, opened, reopened]
 
